Add offsets to separate file for easy maintenance

--- a/DSIITool/DSIITool.csproj
+++ b/DSIITool/DSIITool.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Hack.cs" />
     <Compile Include="Native.cs" />
+    <Compile Include="Offsets.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
